--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
-    "roave/security-advisories": "dev-latest"
+    "roave/security-advisories": "dev-latest",
+    "friendsofphp/php-cs-fixer": "^3.59"
   },
   "config": {
     "optimize-autoloader": true,
