Add phpcs script to composer.json

--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
         "wordpress-install-dir": "web/wp"
     },
     "scripts": {
+        "phpcs": "phpcs --standard=phpcs.xml",
         "test": [
             "phpcs"
         ]
