--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "name": "Ben Word",
             "email": "ben@benword.com",
             "homepage": "https://github.com/retlehs"
+        },
+        {
+            "name": "Benjamin Braun",
+            "email": "beastycoding@outlook.com",
+            "homepage": "https://github.com/beastycoding"
         }
     ],
     "keywords": [
