--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
         "bedrock", "composer", "roots", "wordpress", "wp", "wp-config"
     ],
     "support": {
-        "issues": "https://github.com/roots/bedrock/issues",
-        "forum": "https://discourse.roots.io/category/bedrock"
+        "issues": "https://github.com/beastycoding/bedrock/issues"
     },
     "repositories": [
         {
