--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "roots/wordpress": "6.6.1",
         "roots/wp-config": "1.0.0",
         "roots/wp-password-bcrypt": "1.1.0",
+        "beastycoding/bedrock-plugin-disabler": "^1.0",
         "wpackagist-theme/twentytwentyfour": "^1.0"
     },
     "require-dev": {
