--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "roots/wp-config": "1.0.0",
         "roots/wp-password-bcrypt": "1.1.0",
         "beastycoding/bedrock-plugin-disabler": "^1.0",
+        "beastycoding/bedrock-stage-switcher": "^1.0",
         "wpackagist-theme/twentytwentyfour": "^1.0"
     },
     "require-dev": {
